fix: bind label not showing keymap destination

--- a/editor/style.css
+++ b/editor/style.css
@@ -84,12 +84,12 @@ button:hover {
 
 #group_keymaps {
   width: 580px;
-  height: 300px;
+  height: 420px;
 }
 
 #group_buttons {
   width: 1600px;
-  height: 500px;
+  height: 420px;
 }
 
 #group_action {
@@ -116,13 +116,13 @@ button:hover {
 
 #keymap-select {
   width: 180px;
-  height: 240px;
+  height: 360px;
 }
 
 #bind-select-container {
   display: inline-block;
   width: 352px;
-  height: 240px;
+  height: 360px;
   background: white;
   overflow-x: hidden;
   overflow-y: scroll;
